crates/of_core/src/models/replay/snapshots/of_core__models__replay__snapshot_tests__tests__highlights_my_player_h9.snap
---
source: src/models/replay/snapshot_tests.rs
expression: my_player
---
{
  "level": "my_player",
  "events": [
    {
      "etype": "pass",
      "t": 120.5,
      "minute": 2,
      "team": "HOME",
      "player_id": "H7",
      "pos": {
        "x": 45.0,
        "y": 30.0
      },
      "vel": {
        "x": 5.0,
        "y": 0.0
      },
      "end_pos": {
        "x": 55.0,
        "y": 35.0
      },
      "receiver_id": "H9",
      "ground": true,
      "ball": {
        "from": {
          "x": 45.0,
          "y": 30.0
        },
        "to": {
          "x": 55.0,
          "y": 35.0
        },
        "speed_mps": 15.0,
        "curve": "none"
      },
      "outcome": "complete"
    },
    {
      "etype": "dribble",
      "t": 145.2,
      "minute": 2,
      "team": "HOME",
      "player_id": "H9",
      "pos": {
        "x": 55.0,
        "y": 35.0
      },
      "path": [
        {
          "x": 56.0,
          "y": 36.0
        },
        {
          "x": 58.0,
          "y": 37.0
        }
      ],
      "end_pos": {
        "x": 60.0,
        "y": 38.0
      },
      "beats": [
        "A3"
      ],
      "outcome": "kept"
    },
    {
      "etype": "shot",
      "t": 165.8,
      "minute": 3,
      "team": "HOME",
      "player_id": "H9",
      "pos": {
        "x": 95.0,
        "y": 32.0
      },
      "target": {
        "x": 105.0,
        "y": 30.5
      },
      "xg": 0.25,
      "on_target": true,
      "ball": {
        "from": {
          "x": 95.0,
          "y": 32.0
        },
        "to": {
          "x": 105.0,
          "y": 30.5
        },
        "speed_mps": 28.0,
        "curve": "inside"
      },
      "outcome": "goal"
    }
  ],
  "summary": {
    "total_events": 6,
    "filtered_events": 3,
    "goals": 1,
    "major_incidents": 1,
    "player_events": 3
  }
}
