crates/of_core/src/models/replay/snapshots/of_core__models__replay__snapshot_tests__tests__highlights_simple.snap
---
source: src/models/replay/snapshot_tests.rs
expression: simple
---
{
  "level": "simple",
  "events": [
    {
      "etype": "shot",
      "t": 165.8,
      "minute": 3,
      "team": "HOME",
      "player_id": "H9",
      "pos": {
        "x": 95.0,
        "y": 32.0
      },
      "target": {
        "x": 105.0,
        "y": 30.5
      },
      "xg": 0.25,
      "on_target": true,
      "ball": {
        "from": {
          "x": 95.0,
          "y": 32.0
        },
        "to": {
          "x": 105.0,
          "y": 30.5
        },
        "speed_mps": 28.0,
        "curve": "inside"
      },
      "outcome": "goal"
    }
  ],
  "summary": {
    "total_events": 6,
    "filtered_events": 1,
    "goals": 1,
    "major_incidents": 1,
    "player_events": null
  }
}
