crates/of_core/src/models/replay/snapshots/of_core__models__replay__snapshot_tests__tests__highlights_skip.snap
---
source: src/models/replay/snapshot_tests.rs
expression: skip
---
{
  "level": "skip",
  "events": [],
  "summary": {
    "total_events": 6,
    "filtered_events": 0,
    "goals": 0,
    "major_incidents": 0,
    "player_events": null
  }
}
