crates/of_core/src/models/replay/snapshots/of_core__models__replay__snapshot_tests__tests__schema_info.snap
---
source: src/models/replay/snapshot_tests.rs
expression: replay.schema
---
{
  "name": "of_replay",
  "version": 1
}
