crates/of_core/src/models/replay/snapshots/of_core__models__replay__snapshot_tests__tests__validation_error_empty_id.snap
---
source: src/models/replay/snapshot_tests.rs
expression: "format!(\"{}\", e)"
---
"Event error: Match ID cannot be empty"
