crates/of_core/src/models/replay/snapshots/of_core__models__replay__snapshot_tests__tests__validation_error_invalid_position.snap
---
source: src/models/replay/snapshot_tests.rs
expression: "format!(\"{}\", e)"
---
"Position error: Position (200, 34) is out of bounds"
